--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="action_change_title">Change</string>
     <string name="action_share">Share</string>
     <string name="action_settings">Settings</string>
+    <string name="action_addFav">Add to Favorites</string>
+    <string name="action_displayFav">Display Favorites</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
