was able to get the action item to display the list fragment over the activity but can't get the original layout to close

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="action_displayFav">Display Favorites</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="list_favorites_fragment">list of favorites</string>
 
 
 </resources>
